# platform-api

./: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
src/: main.py
src/adapters/inbound/rest/v1/: __init__.py  auth.py  health.py  providers.py  quotas.py  tenants.py  users.py
src/domain/entities/: tenant.py
src/infrastructure/config/: settings.py
src/infrastructure/fastapi/middleware/: __init__.py  logging.py  metrics.py  tenant.py
